syntax = "proto3";

package comment;

option go_package = "./protobuf/comment";

message Comment {
  string _id = 1;
  string text = 2;
  string userId = 3;
  string postId = 4;
  string createdAt = 5;
  string updatedAt = 6;
  repeated Reply reply = 7;
}

message Reply {
  string _id = 1;
  string userId = 2;
  string text = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CommentForm {
  string text = 1;
  string postId = 2;
}

service CommentService {
  rpc CreateComment(CommentForm) returns (Comment) {}
}